samples/_failures_safe/1761072720_3ba938_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93cf1d24.c:184:1: error: expected ‘{’ at end of input
  184 | void topologicalSortUtil(struct
      | ^~~~
